--- a/static/css/index.css
+++ b/static/css/index.css
@@ -9,17 +9,17 @@
     user-select: none;
 }
 
-*:focus{
+*:focus {
     outline: none;
 }
 
-body{
+body {
     background-color: #141e30;
 }
 
 ::-webkit-scrollbar {
-    width: 0px; 
-    background: transparent; 
+    width: 0px;
+    background: transparent;
 }
 
 .container {
@@ -44,7 +44,7 @@ body{
 
 .nav ul {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     font-size: 3rem;
     align-items: center;
     width: 100%;
@@ -56,26 +56,34 @@ body{
 .nav-logo img {
     height: 3rem;
     cursor: pointer;
+    position: absolute;
+    top: 50%;
+    left: 1rem;
+    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
 }
 
-.nav-chat {
+.nav-btn {
     padding: 0.5rem 1.4rem 0.5rem 1.4rem;
     cursor: pointer;
     display: flex;
     align-items: center;
 }
 
-.nav-chat img {
+.nav-btn img {
     height: 3rem;
     margin-right: 1rem;
 }
 
-.nav-chat h3 {
+.nav-btn h3 {
     font-size: 2rem;
     font-weight: 100;
 }
 
-.nav-chat:hover {
+.nav-btn:hover {
     background-color: rgb(19, 179, 19);
     border-radius: 3px;
     -webkit-border-radius: 3px;
@@ -84,7 +92,7 @@ body{
     -o-border-radius: 3px;
 }
 
-.nav-chat img {
+.nav-btn img {
     width: 4rem;
 }
 
@@ -295,153 +303,4 @@ body{
         -ms-transform: translateX(-0.6rem);
         -o-transform: translateX(-0.6rem);
     }
-}
-
-.notification {
-    background-image: linear-gradient(#141e30, #243b55);
-    position: absolute;
-    width: 100%;
-    height: 80%;
-    bottom: 0rem;
-    overflow: hidden;
-    overflow-y: scroll;
-    padding: 2rem 2rem 2rem;
-    display: flex;
-    flex-direction: column; 
-    justify-content: center;
-    align-items: stretch;
-    transition: all 0.3s;
-    -webkit-transition: all 0.3s;
-    -moz-transition: all 0.3s;
-    -ms-transition: all 0.3s;
-    -o-transition: all 0.3s;
-}
-
-.alerts {
-    font-size: 2.5rem;
-    background-color: rgb(230, 75, 75);
-    width: 100%;
-    min-height: 5rem;
-    overflow-wrap: break-word;
-    hyphens: auto;
-    word-wrap: break-word;
-    display: flex;
-    align-items: center;
-    padding: 1rem 1rem 1rem 1rem;
-    border-radius: 0.3rem;
-    color: white;
-    border: 1px solid transparent;
-    -webkit-border-radius: 0.3rem;
-    -moz-border-radius: 0.3rem;
-    -ms-border-radius: 0.3rem;
-    -o-border-radius: 0.3rem;
-    margin-bottom: 2rem;
-    transition: all 0.3s;
-    -webkit-transition: all 0.3s;
-    -moz-transition: all 0.3s;
-    -ms-transition: all 0.3s;
-    -o-transition: all 0.3s;
-}
-
-.notification div {
-    height: 90%;
-    width: 100%;
-}
-
-.noti-arrow {
-    bottom: 0.6rem;
-    right: 1.3rem;
-    position: fixed;
-    border-radius: 100%;
-    -webkit-border-radius: 100%;
-    -moz-border-radius: 100%;
-    -ms-border-radius: 100%;
-    -o-border-radius: 100%;
-    cursor: pointer;
-}
-
-.noti-arrow:hover {
-    background-color: rgba(248, 248, 248, 0.3);
-
-}
-
-.noti-arrow img {
-    width: 3rem;
-    height: 3rem;
-    padding: 4px 4px 4px 4px;
-}
-
-.notification-hide{
-    height: 7%;
-    transition: all 0.3s;
-    -webkit-transition: all 0.3s;
-    -moz-transition: all 0.3s;
-    -ms-transition: all 0.3s;
-    -o-transition: all 0.3s;
-}
-
-.input-box{
-    position: absolute;
-    transform: translate(-50%,-50%);
-    -webkit-transform: translate(-50%,-50%);
-    -moz-transform: translate(-50%,-50%);
-    -ms-transform: translate(-50%,-50%);
-    -o-transform: translate(-50%,-50%);
-    left: 50%;
-    font-size: 3rem;
-    top: 110px;
-    display: flex;
-    justify-content: center;
-    align-items: baseline;
-    width: 100%;
-    margin-left: -0.02rem;
-    padding: 1rem 10rem 1.2rem 10rem;
-    background-color: #141e30;
-}
-
-.input-box input{
-    width: 100%;
-    border: none;
-    height: 3.5rem;
-    text-indent: 2rem;
-    border-radius: 100px;
-    -webkit-border-radius: 100px;
-    -moz-border-radius: 100px;
-    -ms-border-radius: 100px;
-    -o-border-radius: 100px;
-    font-weight: 100;
-    margin-right: 3rem;
-}
-
-.input-box button{
-    border: none;
-    padding: 1rem 2rem 1rem 2rem;
-    margin-bottom: -1rem;
-    margin-top: 1rem;
-    cursor: pointer;
-    width: 20rem;
-    transition: all 0.3s;
-    -webkit-transition: all 0.3s;
-    -moz-transition: all 0.3s;
-    -ms-transition: all 0.3s;
-    -o-transition: all 0.3s;
-}
-
-.input-box button:hover{
-    background-color: rgb(48, 173, 48);
-    color: white;
-    transform: scale(1.1);
-    -webkit-transform: scale(1.1);
-    -moz-transform: scale(1.1);
-    -ms-transform: scale(1.1);
-    -o-transform: scale(1.1);
-}
-
-.empty{
-    background-image: url('/static/images/inbox-empty-tray.svg');
-    height: 100%;
-    width: 100%;
-    background-size: 20rem;
-    background-repeat: no-repeat;
-    background-position: 50% 50%;
 }
