--- a/static/css/index2.css
+++ b/static/css/index2.css
@@ -7,8 +7,8 @@
     box-sizing: border-box;
 }
 
-body{
-    background-color: rgb(30, 32, 34);
+body {
+    background-color: #141e30;
 }
 
 nav{
@@ -36,7 +36,7 @@ nav ul{
 
 .container{
     background-color: rgb(238, 238, 238);
-    height: 87vh;
+    height: 85vh;
     margin: 1rem 1rem 0 1rem;
 }
 
@@ -61,7 +61,7 @@ nav ul{
 
 }
 .nav-services:hover{
-    background-color: rgb(48, 54, 54);
+    background-color: rgb(19, 179, 19);;
 }
 
 .nav-services img{
@@ -200,7 +200,7 @@ nav ul{
 }
 
 .input{
-    width: 100%;
+    width: 90%;
     position: absolute;
     bottom: 7rem;
     height: 2.5rem;
@@ -217,4 +217,155 @@ nav ul{
 
 .input:focus{
     outline: none;
+}
+
+
+.notification {
+    background-image: linear-gradient(#141e30, #243b55);
+    position: absolute;
+    width: 100%;
+    height: 80%;
+    bottom: 0rem;
+    overflow: hidden;
+    overflow-y: scroll;
+    padding: 2rem 2rem 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: stretch;
+    transition: all 0.3s;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -ms-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    z-index: 10;
+}
+
+.alerts {
+    font-size: 1.5rem;
+    background-color: rgb(230, 75, 75);
+    width: 100%;
+    min-height: 3rem;
+    overflow-wrap: break-word;
+    hyphens: auto;
+    word-wrap: break-word;
+    display: flex;
+    align-items: center;
+    padding: 1rem 1rem 1rem 1rem;
+    border-radius: 0.3rem;
+    color: white;
+    border: 1px solid transparent;
+    -webkit-border-radius: 0.3rem;
+    -moz-border-radius: 0.3rem;
+    -ms-border-radius: 0.3rem;
+    -o-border-radius: 0.3rem;
+    margin-bottom: 2rem;
+    transition: all 0.3s;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -ms-transition: all 0.3s;
+    -o-transition: all 0.3s;
+}
+
+.notification div {
+    height: 90%;
+    width: 100%;
+}
+
+.noti-arrow {
+    bottom: 0.6rem;
+    right: 1.3rem;
+    position: fixed;
+    border-radius: 100%;
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
+    -ms-border-radius: 100%;
+    -o-border-radius: 100%;
+    cursor: pointer;
+}
+
+.noti-arrow:hover {
+    background-color: rgba(248, 248, 248, 0.3);
+
+}
+
+.noti-arrow img {
+    width: 2rem;
+    height: 2rem;
+    padding: 7px 4px 4px 4px;
+}
+
+.notification-hide {
+    height: 7%;
+    transition: all 0.3s;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -ms-transition: all 0.3s;
+    -o-transition: all 0.3s;
+}
+
+.input-box {
+    position: absolute;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    left: 50%;
+    font-size: 3rem;
+    top: 110px;
+    display: flex;
+    justify-content: center;
+    align-items: baseline;
+    width: 100%;
+    margin-left: -0.02rem;
+    padding: 1rem 10rem 1.2rem 10rem;
+    background-color: #141e30;
+}
+
+.input-box input {
+    width: 100%;
+    border: none;
+    height: 3.5rem;
+    text-indent: 2rem;
+    border-radius: 100px;
+    -webkit-border-radius: 100px;
+    -moz-border-radius: 100px;
+    -ms-border-radius: 100px;
+    -o-border-radius: 100px;
+    font-weight: 100;
+    margin-right: 3rem;
+}
+
+.input-box button {
+    border: none;
+    padding: 1rem 2rem 1rem 2rem;
+    margin-bottom: -1rem;
+    margin-top: 1rem;
+    cursor: pointer;
+    width: 20rem;
+    transition: all 0.3s;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -ms-transition: all 0.3s;
+    -o-transition: all 0.3s;
+}
+
+.input-box button:hover {
+    background-color: rgb(48, 173, 48);
+    color: white;
+    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    -o-transform: scale(1.1);
+}
+
+.empty {
+    background-image: url('/static/images/inbox-empty-tray.svg');
+    height: 100%;
+    width: 100%;
+    background-size: 20rem;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
 }
