--- a/views/index2.html
+++ b/views/index2.html
@@ -41,7 +41,7 @@
                         </div>
                     </span>
                 </span>
-                <input type="text" class="input" placeholder="message" v-model="inputText">
+                <input type="text" class="input" placeholder="Enter your email to recieve message" v-model="inputText">
                 <span class="btn-group">
                     <button class="btn btn-blue" @click="send('sms')">Send Sms</button>
                     <button class="btn btn-green" @click="send('email')">Send Email</button>
